objects/fferpcore__DSCustomMapping__c.object
<CustomObject>
    <description>Mapping from message body to target field.</description>
    <fields>
        <fullName>fferpcore__AdditionalLookupField__c</fullName>
        <description>The API name of the field that is used in combination with the Name field to locate the related record. This optional field is used in lookup mappings to identify a single record when record names are not unique.</description>
        <label>Additional Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationField__c</fullName>
        <label>Correlation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationKey__c</fullName>
        <label>Correlation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__CorrelationStrategy__c</fullName>
        <label>Correlation Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>UpdateTotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__DataTransformationTable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</description>
        <inlineHelpText>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</inlineHelpText>
        <label>Data Transformation Table</label>
        <referenceTo>fferpcore__DataTransformationTable__c</referenceTo>
        <relationshipLabel>Declarative Subscription Custom Mappings</relationshipLabel>
        <relationshipName>Declarative_SubscriptionCustomMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Filters__c</fullName>
        <description>For child mappings, the message key that determines whether records are created or updated. For records to be created or updated, the message value must evaluate to true.</description>
        <label>Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__JsonPath__c</fullName>
        <description>Key that represents where to extract data from the message body.</description>
        <label>JSON Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Sequence__c</fullName>
        <description>Order that the mappings have to be built.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
        <relationshipLabel>Custom Mapping</relationshipLabel>
        <relationshipName>CustomMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetChildType__c</fullName>
        <description>The name of the category for the child record. This categorization enables you to create multiple target child records from a single source child record. For example, Default, Debit Line, or Admin Fee.</description>
        <label>Target Child Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetField__c</fullName>
        <description>Target field to map the message data on to.</description>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Declarative Subscription Custom Mapping</label>
    <nameField>
        <displayFormat>DSCM-{00000000}</displayFormat>
        <label>Declarative Subscription Custom Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarative Subscription Custom Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>